# ---------------------------
# Package metadata
# ---------------------------
[metadata]
name = Database_Connector                # Name of the package
version = 0.0.1                          # Initial version
author = Saurav Sabu                     # Author name
author_email = saurav.sabu9@gmail.com    # Author email
description = python package to connect with database   # Short description
long_description = file: README.md       # Long description from README.md
long_description_content_type = text/markdown   # Content type of long description
url = https://github.com/saurav-sabu/Database_Connector   # Project URL
project_urls =                           # Additional project URLs
    Bug Tracker = https://github.com/saurav-sabu/Database_Connector/issues
license = Apache License 2.0             # License type

# ---------------------------
# Package options
# ---------------------------
[options]
package_dir =
    = src                                # Source code directory
packages = find:                        # Automatically find packages
install_requires =                      # Dependencies required for installation
    pymongo
    pymongo[srv]
    dnspython
    numpy
    ensure
    pytest
    tox
    black
    flake8
    mypy
python_requires = >=3.7                  # Minimum Python version required

# ---------------------------
# Package discovery options
# ---------------------------
[options.packages.find]
where = src                             # Look for packages in the 'src' directory
